# cmake_sample_project

./: CMakeLists.txt  README.md  test_script.sh
include/sample-project/: utils.h
src/: main.cpp  utils.cpp
test/: CMakeLists.txt
test/src/: test_utils.cpp
